# advogado-de-bolso

./: .coverage  .env.example  .gitignore  AGENTS.md  HANDOFF.md  INTEGRATION_PLAN.md  Makefile  README.md  implementation_plan.md  loop.md  pyproject.toml
.kimchi/ferments/: 019ec95d-8ce1-7559-a7af-b0c42d9ecf3f.events.jsonl  019ec95d-8ce1-7559-a7af-b0c42d9ecf3f.json
.mimocode/plans/: 1781472880457-quick-comet.md
.opencode/: AGENTS.md
.opencode/agents/: code-writer-nex.md  plan-reviewer-deepseek.md  plan-reviewer-m3.md  plan-reviewer-mimo.md  plan-reviewer-nex.md
.opencode/loop/: decomposition-proposal.md  fix-log.md  new-review-issues.md  open-issues.md  orchestration-state.md  review-log.md
.opencode/plans/: 00-overview-and-architecture.md  01-contracts.md  02-schemas.md  03-adapter.md  04-storage.md  05-agent-and-system-prompt.md  06-service-class.md  07-service-helpers-and-backend.md  08-api.md  09-cli-config-deps.md  10-frontend-build-and-config.md  11-frontend-types-and-defaults.md  12-frontend-api-client.md  13-frontend-app.md  14-frontend-tests.md  15-backend-tests.md  16-tools-modifications.md  17-config-and-docs-modifications.md  18-frontend-modifications.md  19-files-to-delete.md  20-implementation-order.md  21-functional-checks.md  99-index.md  (+4 more)
base_frontend/: AGENTS.md  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
docs/: demo-report.md
tests/: AGENTS.md  conftest.py  test_adapter.py  test_agent.py  test_api.py  test_calculos.py  test_cli.py  test_config.py  test_knowledge_index.py  test_rag_tool.py  test_redigir.py  test_revision_result.py  test_revisor.py  test_service.py  test_storage.py
(+66 files in other folders)
