[project]
name = "advogado-de-bolso"
version = "0.1.0"
description = "Agentic chatbot helping Brazilian consumers with their rights"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Advogado de Bolso contributors" }]
dependencies = [
    "pydantic-ai>=1.0.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "llama-index-core>=0.12.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-readers-web>=0.3.0",
    "chromadb>=0.6.0",
    "huggingface-hub>=0.27.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=5.0.0",
    "html2text>=2024.2.26",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.47",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advogado_de_bolso"]

[project.scripts]
advogado = "advogado_de_bolso.cli:app"
advogado-api = "advogado_de_bolso.api:run"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# NOTE: pythonpath is for local development only.
# CI must install the package in editable mode: pip install -e ".[dev]"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
